# swc

./: README.md  pyproject.toml
swc/: cli.py
tests/: test_swc.py
